# stm32-dfu-bootloader

./: .gitignore  CMakeLists.txt  build.sh  clean.sh  stm32f103.ld
.github/workflows/: build-bl.yml
boards/helloword/: board.cmake
boards/helloword_16k/: board.cmake
boards/kb16/: kb16.c
cmake/: boards.cmake  libopencm3.cmake
src/: flash.h  gpio.h  init.c  main.c  reboot.h  usb.c  usb.h  watchdog.h
targets/generic/: target.cmake
targets/helloword/: target.cmake
